--- a/src/routes/Game/style.module.css
+++ b/src/routes/Game/style.module.css
@@ -1,5 +1,6 @@
-.root {
-  background-color: #827c7c;
-  height: 100vh;
-  color: white;
+.flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
