--- a/src/routes/Game/routes/Start/style.module.css
+++ b/src/routes/Game/routes/Start/style.module.css
@@ -1,8 +1,7 @@
 .flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 40px;
 }
 
 .wrap {
@@ -66,4 +65,10 @@ button:disabled:hover {
     background: #f300b4;
     border: 1px solid transparent;
     color: #fafafa;
+}
+
+.card {
+    width: 100%;
+    height: 300px;
+    cursor: pointer;
 }
